# keyvaluestore

./: .gitignore  CMakeLists.txt  LICENSE  main.c
data/: terms.csv
include/: hyperedges.h  terms.h
src/: hashmap.c  hyperedges.c  terms.c
